feat: first api methods
